	malformed records (e.g., created by very old Open Babel versions)
	via splitting by spaces. Fixes PR#1468802.

	* src/parsmart.cpp: Reformat indentation for clearer code
	reading. Fix bug with syntax of 'H' token -- should refer to the
	*total* number of hydrogens. PR#1463787.

	* test/smartsresults.txt: Regenerate after above bug-fixes.

2006-04-08  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* scripts/openbabel.i, scripts/*: Update to add Cygwin DLL headers.

	* THANKS: Update with contributors to 2.0.1 release.

2006-04-06  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/dlhandler_unix.cpp: Upgrade to use the opendir/readdir
	replacement for the non-portable scandir contributed by Mikael
	Johansson.

	* src/formats/Makefile.am, src/formats/Makefile.in: Fix error in
	logic with building inchi, introduced yesterday. D'oh!

	* src/formats/inchi/Makefile.am, src/formats/inchi/Makefile.in:
	Add --no-undefined flag to produce proper compilation on Windows
	(i.e., Cygwin).

2006-04-05  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* NEWS: Update for 2.0.1 release notes.

	* configure, configure.in, acinclude.m4: Add new configure options
	for silent libtool use & compiler flags.

	* scripts/Makefile.am, scripts/Makefile.in: Provide better
	"distclean" target to remove python build targets and backup
	files.

	* src/mol.h: Update IsRotor() and NumRotors() documentation to
	explain the current minimal definition of a rotatable
	bond. Addresses PR#1463505.

	* src/oberror.cpp: By default, retain a maximum of the 100 most
	recent entries in the error log in memory. All errors will be
	filtered and sent to output, but only retain some (not all). Fixes
	PR#1439893.

	* src/formats/inchi/Makefile.am, src/formats/inchi/Makefile.in:
	Only install the inchi_api.h header.

	* src/formats/xml/Makefile.am, src/formats/xml/Makefile.in: Turn
	off optimization -- appears to fix crashes on FC4 and FC5,
	PR#1447233.
